# tracer-mesh

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: network_rules.yaml
docs/: architecture.md  user-guide.md
scripts/: mock_telemetry.py  seed_cve.py  setup_models.py
src/tracer_mesh/: main.py
src/tracer_mesh/agents/: base.py  network.py  patch.py  recon.py  vuln.py
src/tracer_mesh/core/: broker.py  config.py  db.py  llm.py  utils.py
src/tracer_mesh/templates/: __init__.py  patch_generation.j2  vuln_analysis.j2
tests/: test_db.py  test_main.py  test_mock_telemetry.py  test_network_agent.py  test_patch_agent.py  test_recon_agent.py  test_seeder.py  test_vuln_agent.py
