[tool.poetry]
name = "tracer-mesh"
version = "0.1.0"
description = "Local-first AI Agent mesh for automated system threat hunting and patch proposing"
authors = ["Tracer Mesh Contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "tracer_mesh", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
chromadb = "^0.4.22"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ASYNC"]
